# PiDMX

./: README.md
MacOS_x86_64/: CMakeLists.txt  main.cpp
MacOS_x86_64/libs/include/: main.h
MacOS_x86_64/libs/lib/: README
MacOS_x86_64/main/: PiDMXQtModules.pri  README.txt  autogeneratedIncludes.qml  config.pri  main.cpp  main.h  main.pro
Win-MacOS_x86_64/: README.md  main.cpp
Win-MacOS_x86_64/libs/lib/: README
Win_x86_64/: CMakeLists.txt
Win_x86_64/libs/lib/: README  qrc_myresources.cpp
